Alignment fixes

--- a/scss/3-layout/_header.scss
+++ b/scss/3-layout/_header.scss
@@ -55,7 +55,7 @@ header {
         transition: $trans-neu;
         display: none;
         cursor: pointer;
-        padding: 0.2rem;
+        padding: 0.5rem;
 
         .line-1,
         .line-2,
