--- a/scss/4-pages/_contact.scss
+++ b/scss/4-pages/_contact.scss
@@ -101,7 +101,7 @@
     }
 
     button {
-        width: 80%;
+        width: 50%;
         padding: 0.5rem 0;
         font-size: 1.2rem;
     }
